--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Quickstart</title>
+	<title>Ticktet_Calculator</title>
 	<script id="sap-ui-bootstrap"
 		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_belize"
 		data-sap-ui-libs="sap.m, sap.ui.layout, sap.tnt"
-		data-sap-ui-resourceroots='{"Quickstart": "./"}'
+		data-sap-ui-resourceroots='{"Calculator": "./"}'
 		data-sap-ui-async="true">
 	</script>
 	<script>
-		sap.ui.getCore().attachInit(function () {
-			sap.ui.require([
-				"sap/ui/core/mvc/XMLView"
-			], function (XMLView) {
-				XMLView.create({viewName: "Quickstart.App"}).then(function (oView) {
-					oView.placeAt("content");
-				});
-			});
+	var oPage = sap.ui.view("page",
+		{ type: sap.ui.core.mvc.ViewType.XML,
+			viewName: "Calculator.View",
 		});
+		
+		var oApp = new sap.m.App();
+		oApp.addPage(oPage);
+		oApp.placeAt("content");		
 	</script>
 </head>
 <body class="sapUiBody" id="content"></body>
