--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script>
 	var oPage = sap.ui.view("page",
 		{ type: sap.ui.core.mvc.ViewType.XML,
-			viewName: "Calculator.View",
+			viewName: "Calculator.App",
 		});
 		
 		var oApp = new sap.m.App();
