updates to final version running in WebIde SAP

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	sap.ui.getCore().attachInit(function(){
 		var oPage = sap.ui.view("page",
 		{ type: sap.ui.core.mvc.ViewType.XML,
-			viewName: "Calculator.App",
+			viewName: "Calculator.view.App",
 		});
 		
 		var oApp = new sap.m.App();
